<resources>
    <string name="app_name">Tortannochki</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Тортики Анночки</string>
    <string name="nav_header_subtitle">ya.nabodina@yandex.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Sideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="home_second">Home Second</string>
    <string name="menu_components">Components</string>
    <string name="nameProfile">Enter your name</string>
    <string name="profileName">Name</string>
    <string name="profilePhone">Phone</string>
    <string name="profileE_mail">E-mail</string>
    <string name="profileSave">Save profile</string>

    <string name="order">Order</string>
    <string name="singleStorey">Single storey</string>
    <string name="multyStorey">Multy storey</string>

    <string name="orderView">View order</string>
    <string name="taste">Taste</string>
    <string name="decor">Decor</string>
    <string name="otherSweets">Other Sweets</string>
    <string name="skipFragment">Skip</string>
    <string name="addAddress">Add new address</string>
    <string name="addressName">Address name</string>
    <string name="address">Address</string>
    <string name="EnterAddress">Enter address</string>
    <string name="selectAddress">Selct address</string>
    <string name="delivery">Delivery</string>


</resources>
